# Auto-practice-geode-mod

./: CMakeLists.txt  Mod.json  mod.json
.github/workflows/: build.yml
src/: main.cpp
