# force fresh build
cmake_minimum_required(VERSION 3.21)
if(NOT DEFINED ENV{GEODE_SDK})
    message(FATAL_ERROR "Define GEODE_SDK")
endif()
project(AutoPauseAtPercent VERSION 1.0.0)
file(GLOB SOURCES CONFIGURE_DEPENDS src/*.cpp)
add_library(${PROJECT_NAME} SHARED ${SOURCES})
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
include($ENV{GEODE_SDK}/CMakeLists.txt)
setup_geode_mod(${PROJECT_NAME})
